--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -6,7 +6,7 @@
     <form method="post">
         Username: <input type="text" name="username"/> <br/>
         Password: <input type="password" name="password"/> <br/>
-        <input type="submit" />
+        <input type="submit" value="Log in"/>
     </form>
 </head>
 <body>
